--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,6 +2,7 @@
 @import "node_modules/bourbon/app/assets/stylesheets/bourbon";
 
 @import 'utils/variables';
+@import 'utils/functions';
 @import 'utils/media';
 @import 'utils/mixins';
 @import 'utils/placeholders';
