--- a/assets/scss/components/_loader.scss
+++ b/assets/scss/components/_loader.scss
@@ -9,26 +9,24 @@
   overflow: visible;
   background: #fff;
   color: $gris-oscuro;
+  &__grid {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation-delay: 0.2s;
+  }
+  &__item {
+    width: 100%;
+    height: 100%;
+    background: #fff url('../img/footwear.svg') no-repeat center center;
+    animation: cd-loader-scale-delay 1.3s infinite ease-in-out;
+  }
 }
 
-.cd-loader__grid {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  animation-delay: 0.2s;
-}
-
-.cd-loader__item {
-  width: 100%;
-  height: 100%;
-  background: #fff url(../img/footwear.svg) no-repeat center center;
-  animation: cd-loaderScaleDelay 1.3s infinite ease-in-out;
-}
-
-@keyframes cd-loaderScaleDelay {
+@keyframes cd-loader-scale-delay {
   0%,
   70%,
   100% {
