--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,3 +19,6 @@
 @import 'components/loader';
 @import 'components/slides';
 @import 'components/select';
+@import 'components/buttons';
+
+@import 'pages/404';
