--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -963,90 +963,90 @@ div.pp_woocommerce .pp_close {
   }
 }
 
-/* line 27, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 26, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.upsells ul.products {
   padding: 10px 0 0 0;
 }
 
-/* line 29, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 28, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.upsells ul.products a {
   padding: 15px 5px 5px 5px;
   position: relative;
 }
 
-/* line 32, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 31, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.upsells ul.products a img {
   transition: all .4s ease-in-out;
   padding: 5px;
 }
 
-/* line 36, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 35, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.upsells ul.products a:hover img {
   -webkit-transform: scale(1.2) rotate(-180deg);
           transform: scale(1.2) rotate(-180deg);
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 43, assets/scss/layout/woocommerce/_woo-single-product.scss */
+  /* line 41, assets/scss/layout/woocommerce/_woo-single-product.scss */
   .single.single-product .woocommerce-content-cam div.product div.sumario {
     text-align: center;
     clear: both;
   }
 }
 
-/* line 49, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 46, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario {
   margin: 40px 0 0 0;
 }
 
-/* line 51, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 48, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario h1.product_title {
   font-size: 26px;
 }
 
-/* line 56, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 52, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario .price span {
   color: #008d94;
   font-size: 24px;
 }
 
-/* line 59, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 55, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario .price span .woocommerce-Price-currencySymbol {
   margin-right: 10px;
   color: #666666;
   font-size: 18px;
 }
 
-/* line 67, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 63, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario p.stock {
   color: #008d94;
 }
 
-/* line 70, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 66, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form {
   width: 200px;
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 70, assets/scss/layout/woocommerce/_woo-single-product.scss */
+  /* line 66, assets/scss/layout/woocommerce/_woo-single-product.scss */
   .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form {
     margin: 0 auto;
   }
 }
 
-/* line 77, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 73, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form .quantity .qty {
   height: 30px;
 }
 
-/* line 81, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 77, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form .button {
   background: #008d94;
   transition: ease-in-out 0.3s all;
   border-radius: 0;
 }
 
-/* line 85, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 81, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form .button:hover {
   background: #e22980;
 }
@@ -1202,6 +1202,92 @@ div.instacontainer .copy {
   border-style: solid;
   border-width: 6px 6px 0 6px;
   border-color: lightgrey transparent transparent transparent;
+}
+
+/* line 1, assets/scss/components/buttons.scss */
+.cam-button {
+  color: white;
+  background: #008d94;
+  transition: ease-in-out 0.3s all;
+  border: none;
+  padding: 8px 10px 8px 10px;
+}
+
+/* line 7, assets/scss/components/buttons.scss */
+.cam-button:hover {
+  background: #e22980;
+  color: white;
+}
+
+/* line 11, assets/scss/components/buttons.scss */
+.cam-button:focus {
+  background: rgba(255, 255, 255, 0.5);
+  color: #008d94;
+}
+
+/* line 1, assets/scss/pages/404.scss */
+.nofound {
+  color: #666666;
+  min-height: 60vh;
+  background: url("../img/404.jpg") no-repeat;
+  background-size: cover;
+}
+
+@media handheld, only screen and (max-width: 480px) {
+  /* line 1, assets/scss/pages/404.scss */
+  .nofound {
+    background: url("../img/404-movil.jpg") no-repeat;
+  }
+}
+
+/* line 12, assets/scss/pages/404.scss */
+.nofound-container {
+  min-height: 60vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+/* line 19, assets/scss/pages/404.scss */
+.nofound-content {
+  min-height: 30%;
+}
+
+/* line 22, assets/scss/pages/404.scss */
+.nofound-text {
+  margin-bottom: 20px;
+}
+
+/* line 25, assets/scss/pages/404.scss */
+.nofound-img {
+  height: 250px;
+  background: url("../img/globos.png") no-repeat;
+}
+
+@media handheld, only screen and (max-width: 768px) {
+  /* line 25, assets/scss/pages/404.scss */
+  .nofound-img {
+    display: none;
+  }
+}
+
+/* line 31, assets/scss/pages/404.scss */
+.nofound-img::after {
+  content: '';
+  position: relative;
+  top: -40px;
+  left: -80px;
+  display: block;
+  height: 100px;
+  background: url("../img/un-globo.png") no-repeat;
 }
 
 /*# sourceMappingURL=style.css.map */
