--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -950,103 +950,67 @@ div.pp_woocommerce .pp_close {
   padding: 0;
 }
 
-/* line 20, assets/scss/layout/woocommerce/_woo-single-product.scss */
-.single.single-product .woocommerce-content-cam div.upsells {
-  color: #666666;
-  padding: 32px 0 0 0;
-}
-
 @media handheld, only screen and (max-width: 768px) {
   /* line 20, assets/scss/layout/woocommerce/_woo-single-product.scss */
-  .single.single-product .woocommerce-content-cam div.upsells {
-    text-align: center;
-  }
-}
-
-/* line 26, assets/scss/layout/woocommerce/_woo-single-product.scss */
-.single.single-product .woocommerce-content-cam div.upsells ul.products {
-  padding: 10px 0 0 0;
-}
-
-/* line 28, assets/scss/layout/woocommerce/_woo-single-product.scss */
-.single.single-product .woocommerce-content-cam div.upsells ul.products a {
-  padding: 15px 5px 5px 5px;
-  position: relative;
-}
-
-/* line 31, assets/scss/layout/woocommerce/_woo-single-product.scss */
-.single.single-product .woocommerce-content-cam div.upsells ul.products a img {
-  transition: all .4s ease-in-out;
-  padding: 5px;
-}
-
-/* line 35, assets/scss/layout/woocommerce/_woo-single-product.scss */
-.single.single-product .woocommerce-content-cam div.upsells ul.products a:hover img {
-  -webkit-transform: scale(1.2) rotate(-180deg);
-          transform: scale(1.2) rotate(-180deg);
-}
-
-@media handheld, only screen and (max-width: 768px) {
-  /* line 41, assets/scss/layout/woocommerce/_woo-single-product.scss */
   .single.single-product .woocommerce-content-cam div.product div.sumario {
     text-align: center;
     clear: both;
   }
 }
 
-/* line 46, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 25, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario {
   margin: 40px 0 0 0;
 }
 
-/* line 48, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 27, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario h1.product_title {
   font-size: 26px;
 }
 
-/* line 52, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 31, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario .price span {
   color: #008d94;
   font-size: 24px;
 }
 
-/* line 55, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 34, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario .price span .woocommerce-Price-currencySymbol {
   margin-right: 10px;
   color: #666666;
   font-size: 18px;
 }
 
-/* line 63, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 42, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario p.stock {
   color: #008d94;
 }
 
-/* line 66, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 45, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form {
   width: 200px;
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 66, assets/scss/layout/woocommerce/_woo-single-product.scss */
+  /* line 45, assets/scss/layout/woocommerce/_woo-single-product.scss */
   .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form {
     margin: 0 auto;
   }
 }
 
-/* line 73, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 52, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form .quantity .qty {
   height: 30px;
 }
 
-/* line 77, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 56, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form .button {
   background: #008d94;
   transition: ease-in-out 0.3s all;
   border-radius: 0;
 }
 
-/* line 81, assets/scss/layout/woocommerce/_woo-single-product.scss */
+/* line 60, assets/scss/layout/woocommerce/_woo-single-product.scss */
 .single.single-product .woocommerce-content-cam div.product div.sumario .wrap-sumario form .button:hover {
   background: #e22980;
 }
@@ -1099,6 +1063,30 @@ div.instacontainer .copy {
   position: inherit;
   margin: 0 auto;
   padding: 0;
+}
+
+/* line 1, assets/scss/layout/woocommerce/_product-texture.scss */
+.cam-product-texture {
+  position: absolute;
+  bottom: -80px;
+}
+
+/* line 4, assets/scss/layout/woocommerce/_product-texture.scss */
+.cam-product-texture__img {
+  transition: all .4s ease-in-out;
+  padding: 5px;
+}
+
+/* line 8, assets/scss/layout/woocommerce/_product-texture.scss */
+.cam-product-texture__link {
+  padding: 15px 5px 5px 5px;
+  position: relative;
+}
+
+/* line 11, assets/scss/layout/woocommerce/_product-texture.scss */
+.cam-product-texture__link:hover .cam-product-texture__img {
+  -webkit-transform: scale(1.1) rotate(-180deg);
+          transform: scale(1.1) rotate(-180deg);
 }
 
 /* line 2, assets/scss/components/_loader.scss */
@@ -1204,7 +1192,7 @@ div.instacontainer .copy {
   border-color: lightgrey transparent transparent transparent;
 }
 
-/* line 1, assets/scss/components/buttons.scss */
+/* line 1, assets/scss/components/_buttons.scss */
 .cam-button {
   color: white;
   background: #008d94;
@@ -1213,13 +1201,13 @@ div.instacontainer .copy {
   padding: 8px 10px 8px 10px;
 }
 
-/* line 7, assets/scss/components/buttons.scss */
+/* line 7, assets/scss/components/_buttons.scss */
 .cam-button:hover {
   background: #e22980;
   color: white;
 }
 
-/* line 11, assets/scss/components/buttons.scss */
+/* line 11, assets/scss/components/_buttons.scss */
 .cam-button:focus {
   background: rgba(255, 255, 255, 0.5);
   color: #008d94;
