--- a/assets/scss/layout/woocommerce/_woo-global.scss
+++ b/assets/scss/layout/woocommerce/_woo-global.scss
@@ -123,6 +123,7 @@
         } //Nombre del producto
         h3,
         h2 {
+          font-weight: $font-regular;
           position: relative;
           top: -15px;
           text-align: center;
