--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,42 +57,43 @@ body {
 
 /* line 16, assets/scss/base/_global.scss */
 h1,
-h2 {
+h2,
+h3 {
   font-weight: 300;
 }
 
-/* line 21, assets/scss/base/_global.scss */
+/* line 22, assets/scss/base/_global.scss */
 .dn {
   display: none !important;
 }
 
-/* line 25, assets/scss/base/_global.scss */
+/* line 26, assets/scss/base/_global.scss */
 .fl {
   float: left !important;
 }
 
-/* line 29, assets/scss/base/_global.scss */
+/* line 30, assets/scss/base/_global.scss */
 .fr {
   float: right;
 }
 
-/* line 33, assets/scss/base/_global.scss */
+/* line 34, assets/scss/base/_global.scss */
 .fn {
   float: none;
 }
 
-/* line 37, assets/scss/base/_global.scss */
+/* line 38, assets/scss/base/_global.scss */
 .cb {
   clear: both;
 }
 
-/* line 41, assets/scss/base/_global.scss */
+/* line 42, assets/scss/base/_global.scss */
 hr {
   margin: 10px 0 10px 0;
   padding: 0;
 }
 
-/* line 46, assets/scss/base/_global.scss */
+/* line 47, assets/scss/base/_global.scss */
 a {
   transition: .2s ease-in-out all;
   color: #666666;
@@ -100,13 +101,13 @@ a {
   text-decoration: none;
 }
 
-/* line 51, assets/scss/base/_global.scss */
+/* line 52, assets/scss/base/_global.scss */
 a:hover {
   color: #008d94;
   text-decoration: none;
 }
 
-/* line 55, assets/scss/base/_global.scss */
+/* line 56, assets/scss/base/_global.scss */
 a:focus {
   text-decoration: none;
 }
@@ -223,65 +224,72 @@ a:focus {
   font-weight: 300;
   border: 0;
   margin: 0;
-  margin-bottom: 20px;
 }
 
-/* line 11, assets/scss/layout/_nav.scss */
+@media only screen and (min-width: 769px) {
+  /* line 5, assets/scss/layout/_nav.scss */
+  .navbar {
+    margin-bottom: 20px;
+  }
+}
+
+/* line 13, assets/scss/layout/_nav.scss */
 .navbar-default {
   background: none;
 }
 
-/* line 13, assets/scss/layout/_nav.scss */
+/* line 15, assets/scss/layout/_nav.scss */
 .navbar-default .navbar-nav > li > a {
   color: #666666;
   font-weight: 300 !important;
 }
 
-/* line 16, assets/scss/layout/_nav.scss */
+/* line 18, assets/scss/layout/_nav.scss */
 .navbar-default .navbar-nav > li > a:hover {
   color: #008d94;
 }
 
-/* line 20, assets/scss/layout/_nav.scss */
+/* line 22, assets/scss/layout/_nav.scss */
 .navbar-default .navbar-nav > .active > a {
   background: none;
   color: #e22980;
 }
 
-/* line 23, assets/scss/layout/_nav.scss */
+/* line 25, assets/scss/layout/_nav.scss */
 .navbar-default .navbar-nav > .active > a:hover {
   background: none;
 }
 
-/* line 26, assets/scss/layout/_nav.scss */
+/* line 28, assets/scss/layout/_nav.scss */
 .navbar-default .navbar-nav > .active > a:focus {
   background: none;
 }
 
-/* line 30, assets/scss/layout/_nav.scss */
+/* line 32, assets/scss/layout/_nav.scss */
 .navbar-default .navbar-toggle {
   width: 100%;
   margin: 0 auto;
+  border-radius: 0;
 }
 
-/* line 33, assets/scss/layout/_nav.scss */
+/* line 36, assets/scss/layout/_nav.scss */
 .navbar-default .navbar-toggle:hover {
   background: none;
 }
 
-/* line 36, assets/scss/layout/_nav.scss */
+/* line 39, assets/scss/layout/_nav.scss */
 .navbar-default .navbar-toggle .icon-bar {
   margin: 0 auto;
   max-height: 4px;
   margin-bottom: 4px;
 }
 
-/* line 43, assets/scss/layout/_nav.scss */
+/* line 46, assets/scss/layout/_nav.scss */
 .navbar-collapse {
   border: 0;
 }
 
-/* line 46, assets/scss/layout/_nav.scss */
+/* line 49, assets/scss/layout/_nav.scss */
 .navbar .dropdown-menu {
   background: none;
   font-size: 1.3rem;
@@ -292,121 +300,121 @@ a:focus {
   border-radius: 0;
 }
 
-/* line 54, assets/scss/layout/_nav.scss */
+/* line 57, assets/scss/layout/_nav.scss */
 .navbar .dropdown-menu li > a {
   color: #666666;
   transition: .2s ease-in-out all;
 }
 
-/* line 57, assets/scss/layout/_nav.scss */
+/* line 60, assets/scss/layout/_nav.scss */
 .navbar .dropdown-menu li > a:hover {
   color: #008d94;
   background: rgba(102, 102, 102, 0.1);
 }
 
-/* line 61, assets/scss/layout/_nav.scss */
+/* line 64, assets/scss/layout/_nav.scss */
 .navbar .dropdown-menu li > a:focus {
   text-decoration: none;
 }
 
-/* line 65, assets/scss/layout/_nav.scss */
+/* line 68, assets/scss/layout/_nav.scss */
 .navbar .dropdown-menu .menu-wrapper {
   list-style-type: none;
 }
 
-/* line 68, assets/scss/layout/_nav.scss */
+/* line 71, assets/scss/layout/_nav.scss */
 .navbar .dropdown-menu .item-wrapper {
   display: table;
 }
 
-/* line 70, assets/scss/layout/_nav.scss */
+/* line 73, assets/scss/layout/_nav.scss */
 .navbar .dropdown-menu .item-wrapper > a {
   font-weight: 400 !important;
 }
 
-/* line 73, assets/scss/layout/_nav.scss */
+/* line 76, assets/scss/layout/_nav.scss */
 .navbar .dropdown-menu .item-wrapper a[title] {
   display: block;
 }
 
-/* line 77, assets/scss/layout/_nav.scss */
+/* line 80, assets/scss/layout/_nav.scss */
 .navbar .dropdown-menu > .active > a {
   background: rgba(0, 141, 148, 0.1);
   color: #008d94;
   font-weight: 400 !important;
 }
 
-/* line 85, assets/scss/layout/_nav.scss */
+/* line 88, assets/scss/layout/_nav.scss */
 .nav.navbar-nav {
   width: 100%;
 }
 
-/* line 87, assets/scss/layout/_nav.scss */
+/* line 90, assets/scss/layout/_nav.scss */
 .nav.navbar-nav .menu__item {
   min-width: 14.1%;
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1280px) {
-  /* line 87, assets/scss/layout/_nav.scss */
+  /* line 90, assets/scss/layout/_nav.scss */
   .nav.navbar-nav .menu__item {
     min-width: 12.7%;
   }
 }
 
-/* line 95, assets/scss/layout/_nav.scss */
+/* line 98, assets/scss/layout/_nav.scss */
 .contacto-visible {
   display: none;
 }
 
-/* line 100, assets/scss/layout/_nav.scss */
+/* line 103, assets/scss/layout/_nav.scss */
 .nav-principal-cam .contacto-visible {
   display: block;
 }
 
-/* line 105, assets/scss/layout/_nav.scss */
+/* line 108, assets/scss/layout/_nav.scss */
 .navbar-default .navbar-nav > .open > a {
   background: none;
 }
 
-/* line 107, assets/scss/layout/_nav.scss */
+/* line 110, assets/scss/layout/_nav.scss */
 .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
   background: none;
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 114, assets/scss/layout/_nav.scss */
+  /* line 117, assets/scss/layout/_nav.scss */
   .has-children ul {
     display: block !important;
     margin-left: 15px;
   }
-  /* line 119, assets/scss/layout/_nav.scss */
+  /* line 122, assets/scss/layout/_nav.scss */
   .menu-item img {
     display: none;
   }
 }
 
 @media only screen and (min-width: 768px) {
-  /* line 126, assets/scss/layout/_nav.scss */
+  /* line 129, assets/scss/layout/_nav.scss */
   .navbar-nav .open ul {
     display: none;
   }
-  /* line 129, assets/scss/layout/_nav.scss */
+  /* line 132, assets/scss/layout/_nav.scss */
   .navbar-nav .hovernav:hover > .dropdown-menu {
     display: block;
     width: 100%;
     min-height: 20vh;
     background: rgba(255, 255, 255, 0.9);
   }
-  /* line 135, assets/scss/layout/_nav.scss */
+  /* line 138, assets/scss/layout/_nav.scss */
   .dropdown.mega-menu {
     position: static;
   }
-  /* line 138, assets/scss/layout/_nav.scss */
+  /* line 141, assets/scss/layout/_nav.scss */
   .mega-menu > .dropdown-menu {
     left: 0;
     right: 0;
   }
-  /* line 142, assets/scss/layout/_nav.scss */
+  /* line 145, assets/scss/layout/_nav.scss */
   .mega-menu > ul ul.dropdown-menu {
     position: relative;
     display: block !important;
@@ -415,26 +423,26 @@ a:focus {
     box-shadow: none;
     padding: 0;
   }
-  /* line 150, assets/scss/layout/_nav.scss */
+  /* line 153, assets/scss/layout/_nav.scss */
   .dropdown-menu .container li {
     display: block;
   }
-  /* line 153, assets/scss/layout/_nav.scss */
+  /* line 156, assets/scss/layout/_nav.scss */
   .menu-wrapper > .menu-item {
     padding: 5px;
     width: 25%;
     float: left;
   }
-  /* line 158, assets/scss/layout/_nav.scss */
+  /* line 161, assets/scss/layout/_nav.scss */
   .menu-wrapper > .menu-item > a,
   .item-wrapper > a {
     font-weight: 400 !important;
   }
-  /* line 162, assets/scss/layout/_nav.scss */
+  /* line 165, assets/scss/layout/_nav.scss */
   .menu-wrapper:nth-child(5) {
     clear: left;
   }
-  /* line 165, assets/scss/layout/_nav.scss */
+  /* line 168, assets/scss/layout/_nav.scss */
   .img-damas {
     background: #e9e8e6;
   }
@@ -690,6 +698,7 @@ a:focus {
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2,
 .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3,
 .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h2 {
+  font-weight: 300;
   position: relative;
   top: -15px;
   text-align: center;
@@ -711,7 +720,7 @@ a:focus {
   }
 }
 
-/* line 137, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 138, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3 .touch,
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2 .touch,
 .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3 .touch,
@@ -741,14 +750,14 @@ a:focus {
   }
 }
 
-/* line 150, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 151, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog,
 .woocommerce ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
   padding: 20px;
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1280px) {
-  /* line 150, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 151, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog,
   .woocommerce ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
     padding: 10px;
@@ -756,21 +765,21 @@ a:focus {
 }
 
 @media only screen and (min-width: 1281px) {
-  /* line 150, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 151, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog,
   .woocommerce ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
     padding: 30px;
   }
 }
 
-/* line 162, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 163, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam nav.woocommerce-pagination,
 .woocommerce nav.woocommerce-pagination {
   margin: 40px 0 30px 0;
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 166, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 167, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam nav.woocommerce-pagination ul.page-numbers li span,
   .woocommerce-content-cam nav.woocommerce-pagination ul.page-numbers li a,
   .woocommerce nav.woocommerce-pagination ul.page-numbers li span,
@@ -779,13 +788,13 @@ a:focus {
   }
 }
 
-/* line 178, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 179, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce button.button,
 a.button {
   font-weight: 300 !important;
 }
 
-/* line 183, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 184, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-Price-currencySymbol {
   margin-right: 6px;
 }
@@ -1074,16 +1083,15 @@ div.instacontainer .copy {
 /* line 4, assets/scss/layout/woocommerce/_product-texture.scss */
 .cam-product-texture__img {
   transition: all .4s ease-in-out;
-  padding: 5px;
 }
 
-/* line 8, assets/scss/layout/woocommerce/_product-texture.scss */
+/* line 7, assets/scss/layout/woocommerce/_product-texture.scss */
 .cam-product-texture__link {
-  padding: 15px 5px 5px 5px;
+  padding: 10px 3px 0 3px;
   position: relative;
 }
 
-/* line 11, assets/scss/layout/woocommerce/_product-texture.scss */
+/* line 10, assets/scss/layout/woocommerce/_product-texture.scss */
 .cam-product-texture__link:hover .cam-product-texture__img {
   -webkit-transform: scale(1.1) rotate(-180deg);
           transform: scale(1.1) rotate(-180deg);
@@ -1194,6 +1202,7 @@ div.instacontainer .copy {
 
 /* line 1, assets/scss/components/_buttons.scss */
 .cam-button {
+  display: inline-block;
   color: white;
   background: #008d94;
   transition: ease-in-out 0.3s all;
@@ -1201,13 +1210,13 @@ div.instacontainer .copy {
   padding: 8px 10px 8px 10px;
 }
 
-/* line 7, assets/scss/components/_buttons.scss */
+/* line 8, assets/scss/components/_buttons.scss */
 .cam-button:hover {
   background: #e22980;
   color: white;
 }
 
-/* line 11, assets/scss/components/_buttons.scss */
+/* line 12, assets/scss/components/_buttons.scss */
 .cam-button:focus {
   background: rgba(255, 255, 255, 0.5);
   color: #008d94;
@@ -1276,6 +1285,60 @@ div.instacontainer .copy {
   display: block;
   height: 100px;
   background: url("../img/un-globo.png") no-repeat;
+}
+
+/* line 1, assets/scss/pages/home.scss */
+.welcome {
+  margin-bottom: 2em;
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 3, assets/scss/pages/home.scss */
+  .welcome-txt {
+    position: absolute;
+    color: rgba(255, 255, 255, 0.9);
+    margin-top: 10%;
+  }
+}
+
+/* line 10, assets/scss/pages/home.scss */
+.welcome-img {
+  margin: 0 auto;
+}
+
+/* line 13, assets/scss/pages/home.scss */
+.welcome-subtitle {
+  margin-top: 0;
+}
+
+/* line 17, assets/scss/pages/home.scss */
+.adv-subibaja {
+  color: white;
+  background: #cea271;
+  padding: 25px 0 45px 0;
+}
+
+@media only screen and (min-width: 1281px) {
+  /* line 17, assets/scss/pages/home.scss */
+  .adv-subibaja {
+    width: 1280px;
+    margin: 0 auto;
+  }
+}
+
+/* line 25, assets/scss/pages/home.scss */
+.adv-subibaja-title {
+  font-weight: 300;
+}
+
+/* line 28, assets/scss/pages/home.scss */
+.adv-subibaja-img {
+  padding-top: 10%;
+}
+
+/* line 31, assets/scss/pages/home.scss */
+.adv-subibaja .cam-button {
+  margin: 25px 0 10px 0;
 }
 
 /*# sourceMappingURL=style.css.map */
