--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -14,7 +14,8 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   font-weight: $font-regular;
 }
 
@@ -56,7 +57,6 @@ a {
     text-decoration: none;
   }
 }
-
 .content-wrapper {
   min-height: calc(100vh - 420px);
 }
