Ajustes menores HomePage y contacts.scss

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -27,6 +27,9 @@
     }
     &-img{
         padding-top: 10%;
+        img{
+            margin: 0 auto;
+        }
     }
     .cam-button{
         margin: 25px 0 10px 0;
