--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,36 +153,34 @@ a:focus {
   margin: 25px 0;
   border-radius: 0;
   font-size: 15px;
-  font-weight: bold;
 }
 
-/* line 37, assets/scss/layout/_contact.scss */
+/* line 36, assets/scss/layout/_contact.scss */
 .contacto h3 {
   letter-spacing: 5px;
-  font-weight: bold;
 }
 
-/* line 43, assets/scss/layout/_contact.scss */
+/* line 41, assets/scss/layout/_contact.scss */
 .wpcf7 {
   text-align: center;
   margin: 0 auto;
 }
 
-/* line 48, assets/scss/layout/_contact.scss */
+/* line 46, assets/scss/layout/_contact.scss */
 .wpcf7 textarea,
 .wpcf7 input {
   width: 80%;
   margin: 0 auto;
 }
 
-/* line 58, assets/scss/layout/_contact.scss */
+/* line 56, assets/scss/layout/_contact.scss */
 .wpcf7 {
   margin: 0 auto;
   text-align: center;
   margin: 0 0 25px 0;
 }
 
-/* line 62, assets/scss/layout/_contact.scss */
+/* line 60, assets/scss/layout/_contact.scss */
 .wpcf7 input[type=submit] {
   margin: 10px;
   width: 200px;
@@ -190,24 +188,24 @@ a:focus {
   height: 60px;
 }
 
-/* line 68, assets/scss/layout/_contact.scss */
+/* line 66, assets/scss/layout/_contact.scss */
 .wpcf7 input[type=submit]:hover {
   color: white;
 }
 
-/* line 73, assets/scss/layout/_contact.scss */
+/* line 71, assets/scss/layout/_contact.scss */
 .wpcf7 textarea,
 .wpcf7 input {
   max-width: 500px;
 }
 
-/* line 79, assets/scss/layout/_contact.scss */
+/* line 77, assets/scss/layout/_contact.scss */
 #recaptcha {
   width: 304px;
   margin: 0 auto;
 }
 
-/* line 84, assets/scss/layout/_contact.scss */
+/* line 82, assets/scss/layout/_contact.scss */
 #recaptcha_area,
 #recaptcha_table {
   margin: 0 auto !important;
@@ -1336,7 +1334,12 @@ div.instacontainer .copy {
   padding-top: 10%;
 }
 
-/* line 31, assets/scss/pages/home.scss */
+/* line 30, assets/scss/pages/home.scss */
+.adv-subibaja-img img {
+  margin: 0 auto;
+}
+
+/* line 34, assets/scss/pages/home.scss */
 .adv-subibaja .cam-button {
   margin: 25px 0 10px 0;
 }
