Ajustes estilos checkout, desactivado codigo de custom shipping

--- a/assets/scss/layout/woocommerce/_woo-cart.scss
+++ b/assets/scss/layout/woocommerce/_woo-cart.scss
@@ -3,6 +3,7 @@ a.button {
   font-weight: 400 !important;
 }
 
+.woocommerce input.button,
 .woocommerce input.button.alt,
 a.checkout-button.button.alt.wc-forward {
   background: $azul-cam;
