--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -558,30 +558,31 @@ a:focus {
 .woocommerce-content-cam label,
 .woocommerce label {
   color: #2f3238;
+  font-weight: 300 !important;
 }
 
-/* line 44, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 45, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam .woocommerce-breadcrumb,
 .woocommerce .woocommerce-breadcrumb {
   margin: 0;
   font-size: 1.1em;
 }
 
-/* line 48, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 49, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam .woocommerce-breadcrumb a:hover,
 .woocommerce .woocommerce-breadcrumb a:hover {
   color: #e22980;
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 44, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 45, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam .woocommerce-breadcrumb,
   .woocommerce .woocommerce-breadcrumb {
     text-align: center;
   }
 }
 
-/* line 56, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 57, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam .woocommerce-result-count,
 .woocommerce .woocommerce-result-count {
   color: #a7a7a7;
@@ -591,14 +592,14 @@ a:focus {
   padding: 25px 0 0px 0;
 }
 
-/* line 63, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 64, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam .wapl-flash,
 .woocommerce .wapl-flash {
   top: -35px;
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1280px) {
-  /* line 63, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 64, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam .wapl-flash,
   .woocommerce .wapl-flash {
     top: -20px;
@@ -606,14 +607,14 @@ a:focus {
 }
 
 @media only screen and (min-width: 1281px) {
-  /* line 63, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 64, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam .wapl-flash,
   .woocommerce .wapl-flash {
     top: -15px;
   }
 }
 
-/* line 71, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 72, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam .wapl-flash .woocommerce-advanced-product-label.product-label,
 .woocommerce .wapl-flash .woocommerce-advanced-product-label.product-label {
   border-color: #e3e3e3;
@@ -625,7 +626,7 @@ a:focus {
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1280px) {
-  /* line 71, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 72, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam .wapl-flash .woocommerce-advanced-product-label.product-label,
   .woocommerce .wapl-flash .woocommerce-advanced-product-label.product-label {
     width: 38px;
@@ -635,7 +636,7 @@ a:focus {
   }
 }
 
-/* line 86, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 87, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam .page-title,
 .woocommerce-content-cam .woocommerce-ordering,
 .woocommerce .page-title,
@@ -643,13 +644,13 @@ a:focus {
   display: none;
 }
 
-/* line 90, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 91, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products,
 .woocommerce ul.products {
   padding: 40px 0 0 0;
 }
 
-/* line 92, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 93, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products li.product,
 .woocommerce ul.products li.product {
   margin-bottom: 20px;
@@ -659,7 +660,7 @@ a:focus {
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 92, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 93, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam ul.products li.product,
   .woocommerce ul.products li.product {
     width: 45%;
@@ -667,7 +668,7 @@ a:focus {
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1280px) {
-  /* line 92, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 93, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam ul.products li.product,
   .woocommerce ul.products li.product {
     margin-bottom: 25px;
@@ -675,20 +676,20 @@ a:focus {
 }
 
 @media only screen and (min-width: 1281px) {
-  /* line 92, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 93, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam ul.products li.product,
   .woocommerce ul.products li.product {
     margin-bottom: 0;
   }
 }
 
-/* line 106, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 107, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products li.product a.button,
 .woocommerce ul.products li.product a.button {
   display: none;
 }
 
-/* line 112, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 113, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link:hover h3,
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link:hover h2,
 .woocommerce ul.products li.product a.woocommerce-LoopProduct-link:hover h3,
@@ -697,20 +698,20 @@ a:focus {
   color: #666666;
 }
 
-/* line 119, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 120, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link span.price,
 .woocommerce ul.products li.product a.woocommerce-LoopProduct-link span.price {
   display: none;
   text-align: center;
 }
 
-/* line 124, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 125, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link span.price span.woocommerce-Price-amount span.woocommerce-Price-currencySymbol,
 .woocommerce ul.products li.product a.woocommerce-LoopProduct-link span.price span.woocommerce-Price-amount span.woocommerce-Price-currencySymbol {
   margin-right: 8px;
 }
 
-/* line 129, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 130, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3,
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2,
 .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3,
@@ -728,7 +729,7 @@ a:focus {
 }
 
 @media handheld {
-  /* line 129, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 130, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3,
   .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2,
   .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3,
@@ -737,7 +738,7 @@ a:focus {
   }
 }
 
-/* line 143, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 144, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3 .touch,
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2 .touch,
 .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3 .touch,
@@ -746,7 +747,7 @@ a:focus {
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 129, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 130, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3,
   .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2,
   .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3,
@@ -757,7 +758,7 @@ a:focus {
 }
 
 @media only screen and (min-width: 1281px) {
-  /* line 129, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 130, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h3,
   .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link h2,
   .woocommerce ul.products li.product a.woocommerce-LoopProduct-link h3,
@@ -767,14 +768,14 @@ a:focus {
   }
 }
 
-/* line 156, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 157, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog,
 .woocommerce ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
   padding: 20px;
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1280px) {
-  /* line 156, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 157, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog,
   .woocommerce ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
     padding: 10px;
@@ -782,21 +783,21 @@ a:focus {
 }
 
 @media only screen and (min-width: 1281px) {
-  /* line 156, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 157, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog,
   .woocommerce ul.products li.product a.woocommerce-LoopProduct-link img.attachment-shop_catalog {
     padding: 30px;
   }
 }
 
-/* line 168, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 169, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-content-cam nav.woocommerce-pagination,
 .woocommerce nav.woocommerce-pagination {
   margin: 40px 0 30px 0;
 }
 
 @media handheld, only screen and (max-width: 768px) {
-  /* line 172, assets/scss/layout/woocommerce/_woo-global.scss */
+  /* line 173, assets/scss/layout/woocommerce/_woo-global.scss */
   .woocommerce-content-cam nav.woocommerce-pagination ul.page-numbers li span,
   .woocommerce-content-cam nav.woocommerce-pagination ul.page-numbers li a,
   .woocommerce nav.woocommerce-pagination ul.page-numbers li span,
@@ -805,15 +806,30 @@ a:focus {
   }
 }
 
-/* line 184, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 185, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce button.button,
 a.button {
   font-weight: 300 !important;
 }
 
-/* line 189, assets/scss/layout/woocommerce/_woo-global.scss */
+/* line 190, assets/scss/layout/woocommerce/_woo-global.scss */
 .woocommerce-Price-currencySymbol {
   margin-right: 6px;
+}
+
+/* line 194, assets/scss/layout/woocommerce/_woo-global.scss */
+.woocommerce table.shop_table, .woocommerce-checkout #payment {
+  border-radius: 0;
+}
+
+/* line 197, assets/scss/layout/woocommerce/_woo-global.scss */
+.woocommerce-cart table.cart img {
+  width: 64px;
+}
+
+/* line 200, assets/scss/layout/woocommerce/_woo-global.scss */
+.checkbox {
+  margin: 0;
 }
 
 /* line 2, assets/scss/layout/woocommerce/_woo-gallery.scss */
@@ -1074,6 +1090,7 @@ a.button {
 }
 
 /* line 6, assets/scss/layout/woocommerce/_woo-cart.scss */
+.woocommerce input.button,
 .woocommerce input.button.alt,
 a.checkout-button.button.alt.wc-forward {
   background: #008d94;
@@ -1083,34 +1100,35 @@ a.checkout-button.button.alt.wc-forward {
   font-weight: 400;
 }
 
-/* line 13, assets/scss/layout/woocommerce/_woo-cart.scss */
+/* line 14, assets/scss/layout/woocommerce/_woo-cart.scss */
+.woocommerce input.button:hover,
 .woocommerce input.button.alt:hover,
 a.checkout-button.button.alt.wc-forward:hover {
   background: #e22980;
   color: white;
 }
 
-/* line 19, assets/scss/layout/woocommerce/_woo-cart.scss */
+/* line 20, assets/scss/layout/woocommerce/_woo-cart.scss */
 .woocommerce-checkout #payment div.payment_box {
   background: none;
 }
 
-/* line 23, assets/scss/layout/woocommerce/_woo-cart.scss */
+/* line 24, assets/scss/layout/woocommerce/_woo-cart.scss */
 div.instacontainer {
   text-transform: capitalize;
 }
 
-/* line 25, assets/scss/layout/woocommerce/_woo-cart.scss */
+/* line 26, assets/scss/layout/woocommerce/_woo-cart.scss */
 div.instacontainer div {
   padding: 4px 0 0 0;
 }
 
-/* line 28, assets/scss/layout/woocommerce/_woo-cart.scss */
+/* line 29, assets/scss/layout/woocommerce/_woo-cart.scss */
 div.instacontainer .copy {
   margin: 24px 0 10px 0;
 }
 
-/* line 33, assets/scss/layout/woocommerce/_woo-cart.scss */
+/* line 34, assets/scss/layout/woocommerce/_woo-cart.scss */
 .woocommerce-checkout #payment ul.payment_methods li img {
   position: inherit;
   margin: 0 auto;
